--- a/DIA_2015/Jupyter/GotoGOslim.ipynb
+++ b/DIA_2015/Jupyter/GotoGOslim.ipynb
@@ -1,12 +1,28 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "In this notebook I will attempt to annotate my Skyline output with CGI... codes with GO slim categories"
+    "## In this notebook I will attempt to annotate my Skyline output with CGI... codes with GO slim categories"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I will need the following three files to do so:\n",
+    "    \n",
+    "1) Skyline output with CGI... codes from pivot table. This file has the summed area for each protein for each of the 4 samples\n",
+    "https://github.com/RobertsLab/project-pacific.oyster-larvae/blob/master/DIA_2015/skylineoutput_area_pivottable.txt\n",
+    "    \n",
+    "2) Uniprot database with CGI codes and GO terms\n",
+    "https://raw.githubusercontent.com/Ellior2/Fish-546-Bioinformatics/master/analyses/taylor/uniprot-cgi_GO.tab\n",
+    "    \n",
+    "3) GO to go slim file\n",
+    "https://raw.githubusercontent.com/RobertsLab/project-pacific.oyster-larvae/master/DDA_2016/GO_slim/Gotogoslim.txt\n",
+    "    \n",
+    "Put all of these files in a wd"
    ]
   },
   {
@@ -16,11 +32,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "I will need the following three files to do so:\n",
-    "    \n",
-    "1) Skyline output "
-   ]
+   "source": []
   }
  ],
  "metadata": {
