--- a/DIA_2015/Jupyter/GotoGOslim.ipynb
+++ b/DIA_2015/Jupyter/GotoGOslim.ipynb
@@ -27,12 +27,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\Rhonda\\\\Desktop\\\\Backup\\\\Documents\\\\GitHub\\\\project-pacific.oyster-larvae\\\\DIA_2015\\\\Jupyter'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Rhonda\\Desktop\\Backup\\Documents\\Github\\project-pacific.oyster-larvae\\DIA_2015\\Goslim\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd C:/Users/Rhonda/Desktop/Backup/Documents/Github/project-pacific.oyster-larvae/DIA_2015/Goslim"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verifying that my three files are in my current working directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Volume in drive C is TI106401W0D\n",
+      " Volume Serial Number is D00E-CD8F\n",
+      "\n",
+      " Directory of C:\\Users\\Rhonda\\Desktop\\Backup\\Documents\\Github\\project-pacific.oyster-larvae\\DIA_2015\\Goslim\n",
+      "\n",
+      "07/25/2017  09:21 AM    <DIR>          .\n",
+      "07/25/2017  09:21 AM    <DIR>          ..\n",
+      "07/09/2017  10:15 PM         2,461,982 Gotogoslim.txt\n",
+      "07/25/2017  09:11 AM           189,708 skylineoutput_area_pivottable.txt\n",
+      "11/16/2016  10:43 PM         5,787,377 uniprot-cgi_GO.tab\n",
+      "               3 File(s)      8,439,067 bytes\n",
+      "               2 Dir(s)  379,180,838,912 bytes free\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting my working directory as a variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "wd=\"C:/Users/Rhonda/Desktop/Backup/Documents/Github/project-pacific.oyster-larvae/DIA_2015/Goslim\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Rhonda\\Desktop\\Backup\\Documents\\Github\\project-pacific.oyster-larvae\\DIA_2015\\Goslim\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd $wd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting my skyline output as a variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "skylineout=\"skylineoutput_area_pivottable.txt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\Rhonda\\\\Desktop\\\\Backup\\\\Documents\\\\Github\\\\project-pacific.oyster-larvae\\\\DIA_2015\\\\Goslim'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'head' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!head skylineout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'head' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!head skylineoutput_area_pivottable.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Volume in drive C is TI106401W0D\n",
+      " Volume Serial Number is D00E-CD8F\n",
+      "\n",
+      " Directory of C:\\Users\\Rhonda\\Desktop\\Backup\\Documents\\Github\\project-pacific.oyster-larvae\\DIA_2015\\Goslim\n",
+      "\n",
+      "07/25/2017  09:21 AM    <DIR>          .\n",
+      "07/25/2017  09:21 AM    <DIR>          ..\n",
+      "07/09/2017  10:15 PM         2,461,982 Gotogoslim.txt\n",
+      "07/25/2017  09:11 AM           189,708 skylineoutput_area_pivottable.txt\n",
+      "11/16/2016  10:43 PM         5,787,377 uniprot-cgi_GO.tab\n",
+      "               3 File(s)      8,439,067 bytes\n",
+      "               2 Dir(s)  379,110,154,240 bytes free\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
+   ]
   }
  ],
  "metadata": {
