--- a/DIA_2015/Jupyter/GotoGOslim.ipynb
+++ b/DIA_2015/Jupyter/GotoGOslim.ipynb
@@ -172,20 +172,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'head' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n"
+      "Couldn't find program: 'bash'\n"
      ]
     }
    ],
    "source": [
-    "!head skylineout"
+    "%%bash\n",
+    "head skylineout"
    ]
   },
   {
@@ -251,6 +251,15 @@
    "source": [
     "ls"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
