--- a/DIA_2015/Jupyter/GOterms-2015DIA0oysterseed.ipynb
+++ b/DIA_2015/Jupyter/GOterms-2015DIA0oysterseed.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "source": [
     "## In this directory you will need three files\n",
-    "1) skyline output file         \n",
+    "1) skyline output file from 2015 oysterseed DIA that includes oyster sample ID, found here http://owl.fish.washington.edu/scaphapoda/grace/2015-Cgseed-DIA/post-EncyclopeDIA-Skyline/20181218-SkytoMSstats-report.csv          \n",
     "2) Uniprot GO annotation file (340M) available here http://owl.fish.washington.edu/halfshell/bu-alanine-wd/17-07-20/uniprot-SP-GO.sorted        \n",
     "3) GOslim file available here http://owl.fish.washington.edu/halfshell/bu-alanine-wd/17-07-20/GO-GOslim.sorted"
    ]
@@ -67,7 +67,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 2314k  100 2314k    0     0  2753k      0 --:--:-- --:--:-- --:--:-- 2867k\n"
+      "100 2314k  100 2314k    0     0  3112k      0 --:--:-- --:--:-- --:--:-- 3209k\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      " 94  340M   94  320M    0     0  2493k      0  0:02:19  0:02:11  0:00:08 6604k 0  1040k      0  0:05:35  0:00:10  0:05:25  919k   0   880k      0  0:06:36  0:00:16  0:06:20  791k 0  2081k      0  0:02:47  0:00:51  0:01:56 2657k0  2244k      0  0:02:35  0:01:18  0:01:17 2560k0M   55  188M    0     0  2017k      0  0:02:52  0:01:35  0:01:17 1751kM    0     0  2262k      0  0:02:34  0:02:02  0:00:32 2461k^C\n"
+      "100  340M  100  340M    0     0  6318k      0  0:00:55  0:00:55 --:--:-- 7441k\n"
      ]
     }
    ],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 89.0M  100 89.0M    0     0  3234k      0  0:00:28  0:00:28 --:--:-- 4046k   0  3087k      0  0:00:29  0:00:24  0:00:05 4432k\n"
+      "100 89.0M  100 89.0M    0     0  6493k      0  0:00:14  0:00:14 --:--:-- 6773k\n"
      ]
     }
    ],
@@ -361,7 +361,7 @@
    "outputs": [],
    "source": [
     "#reducing number of columns and sorting \n",
-    "#pull out columns: peptide modified sequence, protein name, area, and replicate name\n",
+    "#pull out columns: peptide modified sequence, protein name, peak area, and replicate name\n",
     "!awk -v OFS='\\t' '{print $3, $1, $14, $17}' < _skyout2-sep.tab | sort \\\n",
     "> _skyout-sort.tab"
    ]
@@ -400,13 +400,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#joining skyline output with uniprot annoation file\n",
     "!join -t $'\\t' \\\n",
     "_skyout-sort.tab \\\n",
     "uniprot-SP-GO.sorted \\\n",
@@ -416,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
