--- a/DIA_2015/Jupyter/GOterms-2015DIA0oysterseed.ipynb
+++ b/DIA_2015/Jupyter/GOterms-2015DIA0oysterseed.ipynb
@@ -369,7 +369,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -400,14 +402,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "#sort the _skyout-sort.tab \n",
+    "!sort _skyout-sort.tab > _skyout.sorted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AAAATGNEAMDTSGGER\tCHOYP_LOC100374524.1.1\t10507\tOysterseed_13\r",
+      "\r\n",
+      "AAAATGNEAMDTSGGER\tCHOYP_LOC100374524.1.1\t12180\tOysterseed_13\r",
+      "\r\n",
+      "AAAATGNEAMDTSGGER\tCHOYP_LOC100374524.1.1\t12952\tOysterseed_01\r",
+      "\r\n",
+      "AAAATGNEAMDTSGGER\tCHOYP_LOC100374524.1.1\t16887\tOysterseed_13\r",
+      "\r\n",
+      "AAAATGNEAMDTSGGER\tCHOYP_LOC100374524.1.1\t17244\tOysterseed_01\r",
+      "\r\n",
+      "AAAATGNEAMDTSGGER\tCHOYP_LOC100374524.1.1\t18543\tOysterseed_02\r",
+      "\r\n",
+      "AAAATGNEAMDTSGGER\tCHOYP_LOC100374524.1.1\t20864\tOysterseed_02\r",
+      "\r\n",
+      "AAAATGNEAMDTSGGER\tCHOYP_LOC100374524.1.1\t21035\tOysterseed_01\r",
+      "\r\n",
+      "AAAATGNEAMDTSGGER\tCHOYP_LOC100374524.1.1\t22874\tOysterseed_13\r",
+      "\r\n",
+      "AAAATGNEAMDTSGGER\tCHOYP_LOC100374524.1.1\t23734\tOysterseed_14\r",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!head _skyout.sorted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!join -t $'\\t' \\\n",
-    "_skyout-sort.tab \\\n",
+    "_skyout.sorted \\\n",
     "uniprot-SP-GO.sorted \\\n",
     "| cut -f1,2,14 \\\n",
     "> _skyout-annot.tab"
@@ -415,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
